# pip-rs

./: Cargo.toml  Dockerfile  README.md
common/src/: lib.rs
dns_updater/: .env.example  Cargo.toml
dns_updater/src/: cli.rs  cloudflare.rs  main.rs
listener/: Cargo.toml
listener/src/: main.rs
pinger/: Cargo.toml
pinger/src/: lib.rs
