[package]
name = "dns_updater"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.56", features = ["derive", "env"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
pinger = { workspace = true }
reqwest = { version = "0.13.1", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
